--- a/index.html
+++ b/index.html
@@ -6,11 +6,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fixed.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="caption text-center">
-      <h1>Roger Linn Interview</h1>
+    <div id="home">
+      <div class="landing">
+        <div class="home-wrap">
+          <div class="home-inner">
+          </div>
+        </div>
+      </div>
+      <div class="caption text-center">
+        <h1>Roger Linn Interview</h1>
+      </div>
+    </div>
+    <div id="about" class="offset">
+      <div class="col-12 narrow text-center">
+        <div class="col-12">
+
+        </div>
+        <div class="row">
+          <div class="col-12-md background">
+            <div class="row">
+              <div class="col-md-12">
+                <img src="img/thumbnail_Roger Linn headshot.jpg" alt="Roger Linn">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
