--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fixed.css">
-    <title>Hello, world!</title>
+    <title>Roger Linn Interview</title>
   </head>
   <body>
     <div id="home">
@@ -19,6 +19,8 @@
       </div>
       <div class="caption text-center">
         <h1>Roger Linn Interview</h1>
+        <p style="text-transform: none;">November 10, 2021</p>
+        <p style="text-transform: none;">By Evan Murray</p>
       </div>
     </div>
     <div id="about" class="offset">
