Add intro paragraph

--- a/index.html
+++ b/index.html
@@ -24,15 +24,24 @@
       </div>
     </div>
     <div id="about" class="offset">
-      <div class="col-12 narrow text-center">
+      <div class="col-12 narrow">
         <div class="col-12">
 
         </div>
         <div class="row">
           <div class="col-12-md background">
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12 text-center">
                 <img src="img/thumbnail_Roger Linn headshot.jpg" alt="Roger Linn">
+              </div>
+            </div>
+            <div class="row">
+              <div class="paragraph-divider">
+                <p class="lead text-left">
+                  Roger Linn is the creator of hardware instruments used by many renowned musicians,
+                  such as Prince, Michael Jackson, The Chemical Brothers, Green Day, and more. His LM-1
+                  programmable drum machine was the first of its kind at the time.
+                </p>
               </div>
             </div>
           </div>
