Add second paragraph

--- a/index.html
+++ b/index.html
@@ -34,14 +34,24 @@
               <div class="col-md-12 text-center">
                 <img src="img/thumbnail_Roger Linn headshot.jpg" alt="Roger Linn">
               </div>
-            </div>
-            <div class="row">
-              <div class="paragraph-divider">
-                <p class="lead text-left">
-                  Roger Linn is the creator of hardware instruments used by many renowned musicians,
-                  such as Prince, Michael Jackson, The Chemical Brothers, Green Day, and more. His LM-1
-                  programmable drum machine was the first of its kind at the time.
-                </p>
+              <div class="row">
+                <div class="paragraph-divider text-left">
+                  <p>
+                    Roger Linn is the creator of hardware instruments used by many renowned musicians, such as Prince,
+                    Michael Jackson, The Chemical Brothers, Green Day, and more. His LM-1 programmable drum machine 
+                    was the first of its kind at the time. Linn also helped design products in other music companies, 
+                    such as Akai's MPC60 and other products with Roland.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="paragraph-divider text-left">
+                  <p>
+                    His company, Roger Linn Design, is a small business which he manages on his own to this day.
+                    He doesn't have any emloyees, but he receives help from various contractors and friends with
+                    aspects of the manufacturing process and software development.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
