Add last intro paragraph

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
                   </p>
                 </div>
               </div>
+              <div class="row">
+                <div class="paragraph-divider text-left">
+                  <p>
+                    When I interviewed Roger, I realized most of the questions he answered came with some
+                    insightful economic and business advice. While it's easy to get caught up in the design
+                    and creation process of an instrument, Roger reminded me of how important it is to
+                    think like an entrepreneur. While entrepreneurs like Roger take risks to start their own
+                    company and develop innovative hardware, they also learn over the course of their lifetime
+                    how to be thrifty with their resources and learn from mistakes.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
