--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                   </p>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <div class="embed-responsive embed-responsive-4by3">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a7Ps3Ox6JDo" allowfullscreen></iframe>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
