--- a/index.html
+++ b/index.html
@@ -58,18 +58,6 @@
                 </div>
               </div>
               <div class="row">
-                <div class="paragraph-divider text-left">
-                  <p>
-                    When I interviewed Roger, I realized most of the questions he answered came with some
-                    insightful economic and business advice. While it's easy to get caught up in the design
-                    and creation process of an instrument, Roger reminded me of how important it is to
-                    think like an entrepreneur. While entrepreneurs like Roger take risks to start their own
-                    company and develop innovative hardware, they also learn over the course of their lifetime
-                    how to be thrifty with their resources and learn from mistakes.
-                  </p>
-                </div>
-              </div>
-              <div class="row">
                 <div class="col-md-12 text-center">
                   <div class="embed-responsive embed-responsive-4by3">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a7Ps3Ox6JDo" allowfullscreen></iframe>
@@ -250,6 +238,25 @@
                 <div class="paragraph-divider text-left">
                   <p>
                     Well I would say this, [laughing]--this is a funny answer. As I say, musicians are cheap bastards. They don't want to pay anything for anything, and profit is low making music products. It's very hard. So the best advice I could give you is, marry somebody who works at Apple because they pay very well at Apple. And that helps me during the down times. Just joking of course. But I would say, "make everything as scaleable as possible. Pinch your pennies. Because if you don't do it now, you'll have to do it later." And if you do it later when you've got some employees... heavily monthly expenses... you're going to go out of business if you don't have the money. There was a funny story: I used to know Ikutaro Kakehashi, who was the founder and CEO of Roland. I would see him at NAMM shows during the 90's. And my company would always have ups and downs. It was always every two years about to go out of business, and somehow I made it work. And I said to him, Taro (which was his nickname), "what am I doing wrong?" He said to me, "fundamental rule of business: you must bring in more money than goes out." It's a very simple rule, but it actually is surprising how I didn't see that and how many people don't see that. And what you have to do is you have to plan. So plan your cashflow so that you have a really nice comfortable margin if things don't go the way you want them to. And be honest with yourself. You may think you've got a great idea, but if the world doesn't agree with you, then don't just exist on fumes. You've got to talk to people and ask them what they really think. In fact, it's almost useless to talk to your friends because none of them will be honest with you. They all say, "oh that's a good idea." They don't want to hurt your feelings. And so you have to find out some way, like you show someone a picture of a rendering (renderings are free to make) and say, "hey here's a product I saw a picture of with an ad, and they're charging $300 for it. Would you buy that?" And the guy would say, "Pfft. You kidding? Look at that thing, it sucks." And then you would know you have their honest opinion. You would show it to 50 different people and see what they say. And you may just find out, as is often the case, that the thing you thought was this marvelous idea that everyone loves is actually something that you love and that your opinion is not shared by others. So it's important to get a realistic assessment. The second thing is, try to spend nothing developing a proof-of-concept prototype. One of the mistakes people make is: they start by making a beautiful enclosure. And they have no idea how hard it will be to develop the software or develop the hardware. And they spent all the money on this, and they'll talk to somebody who says, "oh you'll need to get a plastic-molded case," and it turns out that doing that requires about a $10,000 steel mold. So they spend their money. They borrow their parent's money, and they make this beautiful plastic case, and they have no idea what to put inside. So what you want to do first is a functional proof-of-concept, which you can do on Max on a computer. Mine was some low-cost hardware, such as KORG, KMI controllers and some synthesis. And make something that works the way you want your standalone product to make. Or if it's an app, do some sort of a proof-of-concept, a visual interface, something like that. Some way to do it so you spend maybe no more than $1,000 developing this thing, and then you can show it to people, and they can play with it, and "Do they get engaged? No. Or yes." If they get engaged, great. Show it to a lot of people. If they don't, you've done something wrong. Ask them what's wrong. Or, what's interesting: often what people do is they say, "oh this is so easy to use!" And then they show it to somebody else and say, "use it," and they can't figure out how to do it. You know, "but where's this button? I was expecting this button? I was expecting this knob." And, you don't find this out until you show it to somebody. So don't live in your own head. Make sure you get realistic advice and lose your ego. Keep enough ego so you can drive yourself forward, but not enough so you don't listen to anybody and think you're God.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="paragraph-divider text-left">
+                  <p style="font-weight: bold; font-size: 1.4rem;">
+                    Summary:
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="paragraph-divider text-left">
+                  <p>
+                    When I interviewed Roger, I realized most of the questions he answered came with some
+                    insightful economic and business advice. While it's easy to get caught up in the design
+                    and creation process of an instrument, Roger reminded me of how important it is to
+                    think like an entrepreneur. While entrepreneurs like Roger take risks to start their own
+                    company and develop innovative hardware, they also learn over the course of their lifetime
+                    how to be thrifty with their resources and learn from mistakes.
                   </p>
                 </div>
               </div>
